--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <script src="./sketch.js"></script>
     <script src="./gameController.js"></script>
   </head>
-  <body>
+  <body style="display: contents;">
   </body>
 </html>
